--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "node": "20.x"
   },
   "scripts": {
-    "start": "nodemon server.js",
-    "vercel-build": "npx prisma generate && npx prisma migrate deploy"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "Álvaro Gabriel",
