--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,16 @@
 {
     "version": 2,
-    "builds": [ {
-        "src": "./views/layouts/main.handlebars",
+    "builds": [
+      {
+        "src": "index.js",
         "use": "@vercel/node"
-    } ],
+      }
+    ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
+      {
+        "src": "/(.*)",
+        "dest": "index.js"
+      }
     ]
-}
+  }
+  
